--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,6 +14,8 @@ en:
   searchers:
     index:
       placeholder: 'Search everything...'
+    errors:
+      errors: 'Errors have occurred'
 
   # Shamelessly stolen from ualbertalib/jupiter (thanks Murny!)
   views:
